feat: update deprecated code, use newest Spigot APIs